--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,12 @@
   "require": {
     "php": ">=7.4"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^10.0"
+  },
   "suggest": {
-    "aws/aws-sdk-php": "Required for S3 file uploads. Install with 'composer require aws/aws-sdk-php' if using S3."
+    "aws/aws-sdk-php": "Required for S3 file uploads. Install with 'composer require aws/aws-sdk-php' if using S3.",
+    "spomky-labs/otphp": "Required for TOTP 2FA. Install with 'composer require spomky-labs/otphp' if using 2FA."
   },
   "license": "MIT",
   "authors": [
